--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,9 @@
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
 }
-
+ @media (max-width: 480px) {
+      /* Estilos para telas menores (ex: smartphones) */
+    }
 body {
     line-height: 1.6;
     color: #333;
